# bigwig-loader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  README.md  conda-forge-pypi-map.json  debug.py  environment.yml  pixi.toml  pyproject.toml  scratch_kernel.py  setup.py
.codeboarding/: Core_Data_Processing_Engine.md  Data_Loading_Pipeline_Orchestrator.md  Dataset_API_Framework_Integration.md  Genomic_Data_Sampler.md  on_boarding.md
.github/workflows/: pixi_test.yaml  release.yaml  run-commit-hooks.yml  run_tests.yaml  tests.yml
benchmark/: 01_benchmark_minimal.py  02_benchmark_minimal_pybigwig_multiple_workers.py  03_benchmark_entire_loader.py  04_benchmark_entire_loader_pybigwig.py  05_benchmark_entire_loader_pybigwig_multiple_workers.py  06_benchmark_interval_to_values.py
bigwig_loader/: __init__.py  batch.py  batch_processor.py  bigwig.py  collection.py  cupy_functions.py  dataset.py  dataset_new.py  decompressor.py  default_value.py  download_example_data.py  functional.py  genome.py  gpu_decompressor.py  input_generator.py  intervals_to_values.py  intervals_to_values_gpu.py  intervals_to_values_multitrack.py  memory_bank.py  memory_bank_cufile.py  merge_intervals.pyx  parser.py  path.py  position_sampler.py  pytorch.py  searchsorted.py  settings.py  store.py  streamed_dataset.py  subtract_intervals.pyx  util.py
bigwig_loader/sampler/: genome_sampler.py  position_sampler.py  track_sampler.py
cuda_kernels/: intervals_to_values.cu  intervals_to_values_contiguous.cu
example_data/: benchmark_positions.tsv  some_intervals.tsv  some_positions.tsv
examples/: create_train_val_test_intervals.py  framework_agnostic_example.py  pytorch_example.py
tests/: conftest.py  test_against_pybigwig.py  test_collection.py  test_collection_file_path_interpretation.py  test_cupy_functions.py  test_dataset.py  test_file_path_interpretation.py  test_intervals_to_values.py  test_intervals_to_values_gpu.py  test_intervals_to_values_gpu_window_function.py  test_intervals_to_values_window_function.py  test_merge_intervals.py  test_new_dataset.py  test_path.py  test_position_sampler.py  test_pytorch_dataset.py  test_searchsorted.py  test_streamed_dataset.py  test_subtract_intervals.py  test_track_sampler.py  test_window_function.py
